--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.30.2
 idna==3.10
+InstructorEmbedding==1.0.1
 Jinja2==3.1.6
 jiter==0.9.0
 jsonpatch==1.33
